--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
     <h1 id="txt_projetos">Projetos</h1>
     <div class="container" >
         <div id="img">
-        <img src="org.png" alt="" >
-        <img src="elite.png" alt="" >
-        <img src="cisco.png" alt="" >
+        <a href="https://github.com/MigueXavier/jogadores_crud.git"><img src="Captura de tela 2025-06-30 163502.png" alt="" url="https://github.com/MigueXavier/jogadores_crud.git"></a>
+       <a href="https://github.com/MigueXavier/mysql.git"> <img src="Captura de tela 2025-06-30 171331.png" alt="" ></a>
+        <a href="https://github.com/MigueXavier/produtos_blazor.git"><img src="Captura de tela 2025-06-30 190446.png" alt="" ></a>
     </div >
     </div>
 </div>
