--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </div>
 
 <div id="carrossel">
-    <h1 id="txt_projetos">Projetos</h1>
+    <h1 id="txt_projetos"></h1>
     <div class="container" >
         <div id="img">
         <a href="https://github.com/MigueXavier/jogadores_crud.git"><img src="Captura de tela 2025-06-30 163502.png" alt="" url="https://github.com/MigueXavier/jogadores_crud.git"></a>
